# chungoid

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  Makefile  ONBOARDING.md  README.md  application_security.py  chungoidmcp.py  config.yaml  debug_capability_test.py  debug_manifests.py  engine.py  launch_server.sh  pyproject.toml  pytest.ini  requirements.txt  setup.sh  stage_executor.py  state_manager.py  syntax_cleanup.py  test_discovery.py  tool_manifests.json
.chungoid/: metrics.jsonl
.chungoid/chroma_db/: chroma.sqlite3
.github/: FUNDING.yml
.github/workflows/: library-doc-sync.yml  snapshot-dryrun.yml  snapshot-embed.yml  test.yml
chungoid_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: config.yaml  external_mcp_servers.json  performance_optimizations.json  ultimate_performance.json
dev/scripts/: core_mcp_client.py  embed_core_snapshot.py  flow_registry_cli.py  flow_run.py  snapshot_core_tarball.py  validate_planning_files.py
docs/: WORKFLOW_OVERVIEW.md  autonomous_project_engine_overview.md.backup  autonomous_project_engine_overview.sync.json  autonomous_system_diagram.md  conf.py  index.rst  migration_chromadb_agent_to_mcp_tools.md  project_structure.md  sync_report.md
docs/architecture/: detailed_architecture.md  detailed_architecture.sync.json  system_overview.md  system_overview.sync.json
docs/design_documents/: autonomous_project_engine_overview.md  autonomous_system_diagram.md  dependency_management_agent.md  detailed_architecture.md  environment_bootstrap_agent.md  execution_dsl_reference.md  foundational_principles.md  foundational_principles.sync.json  system_overview.md
docs/guides/: autonomous_cycle_review_and_iteration.md  config_guide.md  documentation_maintenance.md  execution_runtime.md  execution_runtime.sync.json  litellm_setup.md
docs/reference/: execution_dsl_reference.sync.json
docs/source/: README.md  conf.py  user-guide.md  utils.rst
docs/templates/: agent_design_document_template.md
schemas/: doc_requests_schema.yaml  execution_dsl.json  stage_flow_schema.json
schemas/external_tool_schemas/: human_approval_request_schema.json  human_approval_response_schema.json  human_input_request_schema.json  human_input_response_schema.json
scripts/: __init__.py  add_docs.py  agent_registry.py  check_chroma.py  check_metrics_store.py  convert_agents_to_protocol_aware.py  core_mcp_client.py  coverage_audit.py  diagnose_chroma.py  doc_helpers.py  embed_changed_files.py  embed_core_snapshot.py  embed_meta.py  export_jsonschemas.py  extract_tool_spec.py  flow_registry_cli.py  flow_run.py  generate_metrics_report.py  ingest_llms_files.py  list_library_embeddings.py  log_process_feedback.py  metrics_cli.py  migrate_stage_flows.py  prompt_linter.py  prompt_renderer.py  pure_protocol_cleanup.py  pure_protocol_transformation.py  register_mock_testing_agents.py  reregister_core_test_agent.py  run_temp_build.py  seed_flow_registry.py  snapshot_core_tarball.py  sync_agent_registry.py  sync_library_docs.py  test_chroma_persist.py  test_tool_runner.py
server_prompts/: __init__.py  common.yaml  common_template.yaml
server_prompts/autonomous_engine/: arca_optimization_evaluator_v1_prompt.yaml  architect_agent_v1.yaml  architect_agent_v1_prompt.yaml  architect_agent_v1_prompt_enhanced.yaml.bak  automated_refinement_coordinator_agent_v1.yaml  automated_refinement_coordinator_agent_v1_prompt.yaml  blueprint_reviewer_agent_v1.yaml  blueprint_reviewer_agent_v1_prompt.yaml  blueprint_to_flow_agent_v1.yaml  blueprint_to_flow_agent_v1_prompt.yaml  code_debugging_agent_v1_prompt.yaml  core_test_generator_agent_v1.yaml  core_test_generator_agent_v1_prompt.yaml  proactive_risk_assessor_agent_v1.yaml  proactive_risk_assessor_agent_v1_prompt.yaml  product_analyst_agent_v1.yaml  product_analyst_agent_v1_prompt.yaml  project_documentation_agent_v1_prompt.yaml  project_setup_dependencies_prompt.yaml  project_setup_documentation_prompt.yaml  project_setup_environment_prompt.yaml  requirements_risk_agent_v1_prompt.yaml  requirements_tracer_agent_v1.yaml  requirements_tracer_agent_v1_prompt.yaml  smart_code_generator_agent_v1.yaml  smart_code_generator_agent_v1_prompt.yaml  system_requirements_gathering_agent_v1_prompt.yaml
server_prompts/autonomous_project_engine/: ArchitectAgent.yaml  BlueprintReviewerAgent.yaml  CodeGeneratorAgent.yaml  DetailedPlannerAgent.yaml  ProjectDocumentationAgent.yaml  RemediationAgent.yaml  TestGeneratorAgent.yaml  TestRunnerAgent.yaml
server_prompts/master_planner/: agent_selection_prompt.txt  decomposition_prompt.txt  master_planner_prompts.md  sequencing_prompt.txt
server_prompts/stages/: stage0.yaml  stage1.yaml  stage2.yaml  stage3.yaml  stage4.yaml  stage5.yaml  stage_minus1_goal_draft.yaml
src/: test_agent_conversion.py  test_protocols.py
src/chungoid/: __init__.py  cli.py  cli.py.bak  constants.py  core_utils.py  engine.py  flow_executor.py  mcp.py
src/chungoid_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: __init__.py
test_project/: goal.txt
tests/: conftest.py  test_doc_manifest.py  test_integration.py  test_mcp_invoke.py  test_mcp_metadata.py  test_no_rogue_modules.py
tests/.chungoid/: metrics.jsonl
tests/integration/: test_cli_flow_resume.py
tests/unit/: test_a2a_dev_cli.py  test_a2a_utils.py  test_agent_registry.py  test_agent_resolver.py  test_analysis_utils.py  test_chroma_modes.py  test_chroma_utils.py  test_chroma_utils_live.py  test_cli_utils.py  test_cli_utils.py.bak  test_config_loader_live.py  test_core_code_generator_agent.py  test_core_mcp_client.py  test_core_snapshot_dryrun.py  test_core_stage_executor_agent.py  test_core_test_generator_agent.py  test_doc_manifest.py  test_doc_requests_schema.py  test_execution_dsl_validator.py  test_execution_runtime.py  test_feedback_store.py  test_flow_api_endpoint.py  (+29 more)
utils/: analysis_utils.py  chroma_client_factory.py  chroma_utils.py  config_loader.py  exceptions.py  goal.py  logger_setup.py  prompt_manager.py  state_manager.py  template_helpers.py
(+289 files in other folders)
